# topopt-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
examples/: mbb.rs  mbb_active.rs  mbb_full_definition.rs  mbb_full_definition_with_settings.rs  mbb_passive.rs  mbb_without_reflection.rs
src/: cookbook.rs  lib.rs  main.rs  mocktave.rs  utils.rs
tests/: test_against_octave.rs
