[package]
name = "topopt"
version = "0.1.4"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Topology optimization in pure Rust, based on 99 lines of MATLAB"
readme = "README.md"
repository = "https://github.com/cmccomb/topopt-rs"
homepage = "https://github.com/cmccomb/topopt-rs"
documentation = "https://docs.rs/topopt"
license = "MIT"
keywords = ["optimization", "engineering", "topopt"]
categories = ["science", "simulation", "aerospace::simulation", "algorithms"]
exclude = ["mbb.gif"]

[dependencies]
nalgebra = {version = ">=0.30.0", features=["rand"]}
nalgebra-sparse = ">=0.9.0"

[dev-dependencies]
mocktave = "0.1.3"